# hermes

./: .gitignore  Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
core/: Cargo.toml
core/src/: data.rs  lib.rs  utils.rs
core/src/expr/: ast.rs  eval.rs  lex.rs  mod.rs  parse.rs  position.rs  token.rs
desktop/: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  leptosfmt.toml  package-lock.json  package.json
desktop/src/: app.rs  component.rs  dataset.rs  explorer.rs  formula.rs  lib.rs  main.rs  message.rs  state.rs  workbook.rs
desktop/src-lib/: Cargo.toml
desktop/src-lib/src/: data.rs  formula.rs  fs.rs  lib.rs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: fs_daemon.rs  lib.rs  main.rs
desktop/styles/: main.css  output.css
fs_daemon/: Cargo.toml
fs_daemon/src/: event.rs  lib.rs  main.rs  server.rs
