[workspace]
resolver = "2"
members = ["core", "desktop", "desktop/src-tauri", "desktop/src-lib", "fs_daemon"]
default-members = ["core"]

[workspace.dependencies]
hermes-core = { path = "core" }
hermes-desktop-lib = { path = "desktop/src-lib" }
hermes-fs-daemon = { path = "fs_daemon" }

# calamine = "0.30"
calamine = { path = "C:\\Users\\carls\\Downloads\\calamine" }
csv = "1.4"
derive_more = "2.0"
serde = "1.0"
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
tokio = "1.48"

# desktop
io_error_serde = { git = "https://github.com/syre-data/io_error_serde.git" }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
