[package]
name = "hermes-core"
version = "0.0.1"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
derive_more = { workspace = true, features = ["from", "deref"] }
serde = { workspace = true, features = ["derive"], optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-test = "0.2"

[features]
serde = ["dep:serde"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]
