[package]
name = "hermes-ui"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
hermes-core = { workspace = true, features = ["serde", "calamine"] }
hermes-desktop-lib.workspace = true

console_error_panic_hook = "0.1.7"
derive_more = { workspace = true, features = ["deref", "from"] }
js-sys = "0.3"
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = "0.6"
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["time"], optional = true }
tracing-web = { version = "0.1.3", optional = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
uuid = { version = "1.18", features = ["v4", "js"] }

leptos = { version = "0.8", features = ["nightly", "csr"] }
leptos_meta = { version = "0.8" }
leptos_router = "0.8"
reactive_stores = "0.3"
leptos_icons = { git = "https://github.com/carloskiki/leptos-icons" }

[dependencies.icondata]
version = "0.5"
default-features = false
features = ["ant-design-icons", "font-awesome", "material-design-icons"]

[dependencies.tauri-sys]
git = "https://github.com/JonasKruckenberg/tauri-sys"
branch = "v2"
features = ["core"]

[dependencies.leptos-use]
git = "https://github.com/Synphonyte/leptos-use.git"
branch = "main"
default-features = false
features = ["use_preferred_dark", "use_mutation_observer"]
# TODO: `use_mutation_observer` only activate to compensate for error.
# See https://github.com/Synphonyte/leptos-use/issues/279.

[dependencies.web-sys]
version = "0.3"
features = ["HtmlElement", "HtmlInputElement"]

[features]
default = ["tracing"]
tracing = [
	"dep:tracing",
	"dep:tracing-subscriber",
	"dep:tracing-web",
	"leptos/tracing",
]
