[package]
name = "hermes-fs-daemon"
version = "0.0.1"
edition = "2024"

[dependencies]
crossbeam = "0.8"
notify = { version = "8.0", default-features = false, optional = true }
notify-debouncer-full = { version = "0.6", default-features = false, features = ["crossbeam-channel"], optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["time", "env-filter"], optional = true }
tokio = { workspace = true, features = ["sync"], optional = true }

[features]
server = ["dep:notify", "dep:notify-debouncer-full", "dep:tokio"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]
