[package]
name = "hermes-desktop-lib"
version = "0.0.1"
edition = "2024"

[dependencies]
hermes-core = { workspace = true, features = ["serde"] }

csv = "1.3"
calamine = { workspace = true, features = ["serde"] }
derive_more = { workspace = true, features = ["from"] }
serde = { workspace = true, features = ["derive"] }
io_error_serde = { git = "https://github.com/syre-data/io_error_serde.git" }
thiserror = "2.0"
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true, features = ["time"] }

[features]
fs = []
tracing = ["dep:tracing", "dep:tracing-subscriber"]
