[package]
name = "hermes"
version = "0.0.1"
description = "Automated spreadsheet analysis."
authors = ["Brian Carlsen <carlsen.bri@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hermes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

hermes-core = { workspace = true, features = ["calamine"] }
hermes-desktop-lib = { workspace = true, features = ["fs"] }

csv.workspace = true
notify = { version = "8.0", default-features = false }
notify-debouncer-full = { version = "0.6", default-features = false }
rayon = "1.8"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1.48", features = ["rt", "fs"] }
tracing = { workspace = true, optional = true }
tracing-appender = { version = "0.2", optional = true }
tracing-subscriber = { workspace = true, optional = true, features = [
    "time",
    "json",
    "env-filter",
] }
trash = "5.2"
crossbeam = { version = "0.8" }


[features]
default = ["tracing"]
tracing = [
    "dep:tracing",
    "dep:tracing-appender",
    "dep:tracing-subscriber",
    "hermes-desktop-lib/tracing",
]
